# crosstalk

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  VERUS.md  about.toml  deny.toml  lib.rs  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: orchestrator.rs
crates/crosstalk-core/src/: consts.rs  error.rs  lib.rs  orchestrator.rs  session.rs  sigma.rs
crates/crosstalk-mcp/src/: gateway.rs
crates/crosstalk-memory/src/: recall.rs  store.rs
crates/crosstalk/src/: app.rs
crosstalk-concurrency/: Cargo.toml
crosstalk-concurrency/src/: cache.rs  cancel.rs  executor.rs  lib.rs  sharded.rs
crosstalk-eval/: Cargo.toml  gold.smoke_build.json
crosstalk-eval/results/: live_run_checkpoint.jsonl  swe_bench_results.csv  topology_distribution.csv  ucb1_convergence.csv
crosstalk-eval/src/: claude_agent.rs  dataset.rs  docker_env.rs  harness.rs  main.rs  report.rs  runner.rs  scenarios.rs  swe_bench_runner.rs
docs/: substrate-sharded.md
examples/: verify_cogmem_sample.rs
src/: agent_trait.rs  analytics.rs  collective_intelligence.rs  compute.rs  consensus.rs  diff.rs  embedding.rs  environment.rs  factory.rs  godview.rs  intelligence.rs  interface.rs  lib.rs  logger.rs  main.rs  mcp.rs  memory.rs  orchestrator.rs  planning.rs  proof.rs  quality.rs  reasoning.rs  release.rs  sandbox.rs  security.rs  self_improvement.rs  simulation.rs  state.rs  storage.rs  swarm.rs  transport.rs  types.rs  ui.rs  validation.rs  verification.rs  visualization.rs
src/core/: agent_trait.rs  config.rs  environment.rs  factory.rs  mod.rs  orchestrator.rs  state.rs  storage.rs
src/core/orchestrator/: agents.rs  artifacts.rs  lifecycle.rs  mod.rs  parsing.rs  synthesis.rs  verification.rs
src/engines/: analytics.rs  collective_intelligence.rs  compute.rs  consensus.rs  data_minimizer.rs  diff.rs  intelligence.rs  linter.rs  memory.rs  metacognition.rs  mod.rs  novelty.rs  planning.rs  prompt_evolution.rs  proof.rs  quality.rs  reasoning.rs  release.rs  sandbox.rs  security.rs  self_improvement.rs  simulation.rs  surprise.rs  swarm.rs  topology.rs  validation.rs  verification.rs
src/mcp/: bridge.rs  did_resolver.rs  gateway.rs  mod.rs  transport.rs
src/types/: analytics.rs  artifact.rs  compute.rs  consensus.rs  conversation.rs  events.rs  fiduciary.rs  intelligence.rs  mcp.rs  memory.rs  mod.rs  mode.rs  planning.rs  principal.rs  security.rs  self_improvement.rs
src/ui/: app.rs  events.rs  inject.rs  mod.rs  model_select.rs  render.rs  tui.rs  visualization.rs
tests/: analytics_tests.rs  auditor_tests.rs  bridge_tests.rs  collective_intelligence_tests.rs  common.rs  consensus_enhancement_tests.rs  consensus_tests.rs  constraint_routing_tests.rs  engine_tests.rs  environment_tests.rs  ingestion_tests.rs  intelligence_tests.rs  linter_tests.rs  mcp_tests.rs  memory_tests.rs  orchestrator_tests.rs  planning_tests.rs  proof_export_tests.rs  quality_tests.rs  sandbox_tests.rs  security_tests.rs  self_improvement_tests.rs  simulation_tests.rs  state_tests.rs  swarm_tests.rs  synthesis_tests.rs  types_tests.rs  ui_tests.rs  verification_tests.rs  visualization_tests.rs
verus/: README.md  consensus.rs  hash_chain.rs  invariant_checker.rs  liveness.rs  state.rs
