[package]
name = "crosstalk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.39"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.5.44"
crossbeam = "0.8.4"
crossterm = "0.29.0"
dashmap = "6.1.0"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
futures = "0.3.32"
indicatif = "0.18.4"
lancedb = "0.18.0"
petgraph = "0.7.1"
arrow-array = "53.3.0"
rand = "0.9.0"
ratatui = "0.30.0"
regex = "1.11.1"
rig-core = "0.34.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
similar = "3.0.0"
sled = "0.34.7"
sysinfo = "0.33.1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.2"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
which = "7.0.1"

[dev-dependencies]
tempfile = "3.10.1"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
