[package]
name = "crosstalk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.5.44"
crossbeam = "0.8.4"
crossterm = "0.29.0"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
futures = "0.3.32"
indicatif = "0.18.4"
dashmap = "6.1.0"
lancedb = "0.18.0"
petgraph = "0.7.1"
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
rayon = "1.11.0"
rand = "0.9.0"
ratatui = "0.30.0"
regex = "1.11.1"
rig-core = { version = "0.34.0", features = ["all"] }
rustc-hash = "2.0.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
similar = "3.0.0"
sled = "0.34.7"
sysinfo = "0.33.1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
toml = "0.8.20"
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.2"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
which = "7.0.1"
wgpu = "24.0.1"
winit = "0.30.9"
bytemuck = { version = "1.21.0", features = ["derive"] }
fastembed = { version = "3", default-features = false, features = ["online", "ort-load-dynamic"] }
ort = { version = "=2.0.0-rc.4", features = ["coreml"] }
flate2 = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

[package.metadata.bundle]
name = "Crosstalk"
identifier = "com.sovereign.crosstalk"
icon = ["assets/icon.png"]
version = "1.0.0"
resources = ["src/ui/viz.wgsl"]
copyright = "Copyright © 2026 Sovereign Architect"
category = "DeveloperTool"
short_description = "AI Multi-Model Mediator and Collective Synthesis Engine"
long_description = """
Crosstalk is a high-performance multi-agent orchestrator 
that uses parallel reasoning swarms and collective AST synthesis 
to solve complex architectural and algorithmic tasks.
"""

[dev-dependencies]
tempfile = "3.10.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "orchestrator"
harness = false

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
