[workspace]
members = ["crosstalk-eval", "crosstalk-concurrency"]

[package]
name = "crosstalk"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Multi-model AI orchestrator: routes a task across several models, scores and synthesizes their proposals, and verifies the result, with a ratatui TUI."
authors = ["David Condrey <david@writerslogic.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/writerslogic/crosstalk"
readme = "README.md"

[[bin]]
name = "crosstalk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
chrono = "0.4.39"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.5.44"
crossbeam = "0.8.4"
crosstalk-concurrency = { path = "crosstalk-concurrency" }
crossterm = "0.29.0"
dotenv = "0.15.0"
ed25519-dalek = "2.1.1"
futures = "0.3.32"
indicatif = "0.18.4"
dashmap = "6.1.0"
lancedb = "0.18.0"
petgraph = "0.7.1"
arrow-array = "54.2.1"
arrow-schema = "54.2.1"
rayon = "1.11.0"
rand = "0.9.0"
ratatui = "0.30.0"
regex = "1.11.1"
rig-core = { version = "0.34.0", features = ["all"] }
rustc-hash = "2.0.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
similar = "3.0.0"
sled = "0.34.7"
sysinfo = "0.33.1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
toml = "0.8.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tree-sitter = "0.24.7"
tree-sitter-rust = "0.23.2"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
which = "7.0.1"
fastembed ={ version = "3", default-features = false, features = ["online", "ort-load-dynamic"], optional = true }
ort = { version = "=2.0.0-rc.4", features = ["coreml"], optional = true }
flate2 = "1.0"
glob = "0.3"
zeroize = { version = "1.8", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"

[features]
default = []
ort-embeddings = ["dep:fastembed", "dep:ort"]

[package.metadata.bundle]
name = "Crosstalk"
identifier = "com.sovereign.crosstalk"
icon = ["assets/icon.png"]
version = "1.0.0"
copyright = "Copyright © 2026 Sovereign Architect"
category = "DeveloperTool"
short_description = "AI Multi-Model Mediator and Collective Synthesis Engine"
long_description = """
Crosstalk is a high-performance multi-agent orchestrator 
that uses parallel reasoning swarms and collective AST synthesis 
to solve complex architectural and algorithmic tasks.
"""

[dev-dependencies]
tempfile = "3.10.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "orchestrator"
harness = false

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3
