[package]
name = "crosstalk-concurrency"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Cancellation primitives for Crosstalk's concurrent orchestration"
authors = ["David Condrey <david@writerslogic.com>"]
license = "AGPL-3.0-only"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }