[package]
name = "crosstalk-eval"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Benchmarking harness for Crosstalk UCB1 topology selection (arXiv companion)"
authors = ["David Condrey <david@writerslogic.com>"]
license = "AGPL-3.0-only"

# NOTE: This crate intentionally does NOT depend on the `crosstalk` crate to
# keep compilation fast. Key domain types (BudgetMode, DebateTopology, etc.)
# are re-declared here and kept in sync with `crosstalk::types` by convention.

[dependencies]
anyhow   = "1.0"
serde    = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio    = { version = "1", features = ["full"] }
csv      = "1.3"
rand     = "0.9"
regex    = "1"
tracing  = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap     = { version = "4", features = ["derive", "env"] }
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
